# algebra-elementary

./: .gitignore  .travis.yml  LICENSE  README.md  algebra-elementary.cabal  stack.yaml
benchmark/: Criterion.hs  criterion.hs
src/Numeric/Algebra/: Elementary.hs
src/Numeric/Algebra/Elementary/: AST.hs  Parse.hs  Pretty.hs  Rewrite.hs  Solve.hs
testsuite/: Tasty.hs
